# 2025-s2-programming

./: .gitignore  README.md  gen_index.py  get_texts.py  index.pkl  main.py  overallsearch.py  pyproject.toml  test.py
static/: index.html
static/css/: style.css
static/js/: script.js
